index file changes

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 
 
 <!-- Libs -->
-<link rel="stylesheet" href="./assets/libs/bootstrap-icons/font/bootstrap-icons.css">
-<link rel="stylesheet" href="./assets/fonts/wedding-icon-font/flaticon.css">
-<link rel="stylesheet" href="./assets/fonts/fontello/css/fontello.css">
+<link rel="stylesheet" href="assets/libs/bootstrap-icons/font/bootstrap-icons.css">
+<link rel="stylesheet" href="assets/fonts/wedding-icon-font/flaticon.css">
+<link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
 
 
 
 
 
 <!-- Theme CSS -->
-<link rel="stylesheet" href="./assets/css/theme.min.css">
+<link rel="stylesheet" href="assets/css/theme.min.css">
+
+<link rel="stylesheet" href="assets/css/style.css">
+
   <title>Your Legal Website</title>
 
 </head>
@@ -30,8 +33,8 @@
       <div class="row">
         <div class="col-md-12">
           <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand col-lg-3 col-6" href="index.html">
-                <img src="assets/images/logo/law-logo.png" class="img-fluid w-30" alt="">
+            <a class="navbar-brand col-lg-1 col-6" href="index.html">
+                <img src="assets/images/logo/law-logo.png" class="img-fluid w-100" alt="">
               </a>
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -41,7 +44,7 @@
               <span class="icon-bar"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mx-auto ms-lg-auto">
+              <ul class="navbar-nav mx-auto ms-lg-5">
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarListing" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
@@ -166,8 +169,8 @@
 
               <div class="p-3 p-lg-0">
                 <ul class="navbar-nav mx-auto ms-lg-auto">
-                <li class="nav-item dropdown ">
-                  <a class="nav-link dropdown-toggle" href="#" id="blogDropdown" role="button" data-bs-toggle="dropdown"
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle px-4" href="#" id="blogDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     Select Location
                   </a>
@@ -181,8 +184,9 @@
                     <li><a class="dropdown-item" href="">Bangalore</a></li>
                   </ul>
                 </li>
+                <li><a href="signin.html" class="btn btn-secondary bg-gold shadow-sm my-3 text-white border-0">Sign in</a></li>
               </ul>
-              <!-- <a href="./pages/signin.html" class="btn btn-secondary shadow-sm">Sign in</a> -->
+              
               </div>
             </div>
           </nav>
