--- a/index.html
+++ b/index.html
@@ -104,6 +104,38 @@
             <p class="lead">Helping you resolve your legal problem</p>
           </div>
         </div>
+        <div class="col-lg-6 col-md-12 mx-auto">
+          <div class=" mt-5">
+            <!-- card -->
+            <div class="card bg-dark bg-opacity-50 border-0">
+                <!-- card body -->
+                <div class="card-body p-3">
+                    <!-- form -->
+                    <form>
+                        <div class="row g-2">
+                            <!-- col -->
+                            <div class="col-sm">
+                                <select class="form-select border-white" id="selectService" aria-label="Floating label select example">
+                                    <option selected="">Property Possession Delay - RERA</option>
+                                    <option value="">Apostille Certificate</option>
+                                    <option value="">Possession Delay - NCLT</option>
+                                    <option value="">Mutual Consent Divorce</option>
+                                    <option value="">Cheque Bounce Complaint</option>
+                                    <option value="">Legal Notice</option>
+                                </select>
+                            </div>
+                            <!-- col -->
+                            <div class="col-sm-2">
+                                <div class="d-grid ">
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        </div>
       </div>
     </div>
   </section>
