property image updated

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p class="lead">Helping you resolve your legal problem</p>
           </div>
         </div>
-        <div class="col-lg-6 col-md-12 mx-auto">
+        <div class="col-lg-7 col-md-12 mx-auto">
           <div class=" mt-5">
             <!-- card -->
             <div class="card bg-dark bg-opacity-50 border-0">
@@ -125,9 +125,21 @@
                                 </select>
                             </div>
                             <!-- col -->
+                            <div class="col-sm">
+                              <select class="form-select border-white" aria-label="Floating label select example">
+                                  <option selected="">New Delhi</option>
+                                  <option value="">Mumbai</option>
+                                  <option value="">Pune</option>
+                                  <option value="">Hyederabad</option>
+                                  <option value="">Kolkata</option>
+                                  <option value="">Gurgaon</option>
+                                  <option value="">Bangalore</option>
+                              </select>
+                          </div>
+                            <!-- col -->
                             <div class="col-sm-2">
                                 <div class="d-grid ">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    <button type="submit" class="btn btn-primary bg-gold border-0">Submit</button>
                                 </div>
                             </div>
                         </div>
@@ -200,40 +212,75 @@
     </div>
   </section>
   <!-- listing -->
-  <!-- post -->
-  <section class="pb-8">
+ 
+  <section class="pb-lg-14 pb-8">
     <div class="container">
-      <div class="row align-items-center mb-6">
-        <div class="col-md-8 col-12">
-          <h2 class="mb-1 fs-1">About Our Legal Ideas and tips. </h2>
+      <div class="row mb-6">
+        <!-- caption -->
+        <div class="col-md-12 col-12">
+          <h2 class="mb-0 fs-1">Explore our highlights of legal service</h2>
         </div>
-
       </div>
       <div class="row">
-        <div class="col-lg-4 col-md-12 col-12 mb-6 mb-md-0">
-          <div class="mb-4 mb-lg-8">
-            <div class="card bg-light border border-secondary border-5 p-4 text-center">
-              <h3 class="text-uppercase">Who We are</h3>
-              <p class="lead my-4">A law firm with a unique blend of services to the Indian Diaspora across the globe to any legal issue in India. With the presence of local offices across the globe and the presence of the firm across the nation…</p>
-            </div>
+        <!-- col -->
+        <div class="col-lg-4 col-md-6">
+          <div class="card mb-4 mb-md-0 bg-secondary-subtle">
+              <div class="img-hover m-2 mb-0">
+                  <a href="#">
+                      <img src="assets/images/services/land-property.jpg" alt="wed" class="img-fluid w-100">
+                  </a>
+              </div>
+              <div class="card-body">
+                  <h3>
+                      <a href="#" class="text-inherit">Land and Property Disputes</a>
+                  </h3>
+                  <div class="fs-5">
+                      <p class="text-black">Property and land has been invested into and created by families over years.</p>
+                  </div>
+                  <a href="#" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
+              </div>
           </div>
-        </div>
-        <div class="col-lg-4 col-md-12 col-12 mb-6 mb-md-0">
-          <div class="mb-4 mb-lg-8">
-            <div class="card bg-light border border-secondary border-5 p-4 text-center">
-              <h3 class="text-uppercase">Why Choose us</h3>
-              <p class="lead my-4">In an increasingly inter-connected world, the experience of working successfully in a diverse world is crucial. The  cross-cultural skills have been pivotal in understanding the expectation of the persons.</p>
-            </div>
+      </div>
+        <!-- col -->
+
+        <!-- col -->
+        <div class="col-lg-4 col-md-6">
+          <div class="card mb-4 mb-md-0 bg-secondary-subtle">
+              <div class="img-hover m-2 mb-0">
+                  <a href="#">
+                      <img src="assets/images/services/real-estate.jpg" alt="wed" class="img-fluid w-100">
+                  </a>
+              </div>
+              <div class="card-body">
+                  <h3>
+                      <a href="#" class="text-inherit">Real Estate</a>
+                  </h3>
+                  <div class="fs-5">
+                      <p class="text-black">Real estate as the term suggests refers to buying, selling, or renting any type of property.</p>
+                  </div>
+                  <a href="#" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
+              </div>
           </div>
-        </div>
-        <div class="col-lg-4 col-md-12 col-12 mb-6 mb-md-0">
-          <div class="mb-4 mb-lg-8">
-            <div class="card bg-light border border-secondary border-5 p-4 text-center">
-              <h3 class="text-uppercase">Where We Work</h3>
-              <p class="lead my-4">For our clients with global operations, we deliver a consistent, cohesive and coherent array of collaborative services that answer their legal needs at any time, in any location. Legal Help NRI has…</p>
+      </div>
+      <!-- col -->
+      <div class="col-lg-4 col-md-6">
+        <div class="card mb-4 mb-md-0 bg-secondary-subtle">
+            <div class="img-hover m-2 mb-0">
+                <a href="#">
+                    <img src="assets/images/services/inheritence.jpg" alt="wed" class="img-fluid w-100">
+                </a>
             </div>
-          </div>
+            <div class="card-body">
+                <h3>
+                    <a href="#" class="text-inherit">Inheritance and succession</a>
+                </h3>
+                <div class="fs-5">
+                    <p class="text-black">Succession is the process of inheriting the assets which includes cash, jewellery, land, house or any property.</p>
+                </div>
+                <a href="#" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
+            </div>
         </div>
+    </div>
       </div>
     </div>
   </section>
