service page added

--- a/index.html
+++ b/index.html
@@ -3,23 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Libs -->
 <link rel="stylesheet" href="assets/libs/bootstrap-icons/font/bootstrap-icons.css">
 <link rel="stylesheet" href="assets/fonts/wedding-icon-font/flaticon.css">
 <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
 
-
-
-
-
 <!-- Theme CSS -->
-<link rel="stylesheet" href="assets/css/theme.min.css">
+  <link rel="stylesheet" href="assets/css/theme.min.css">
 
-<link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <title>Your Legal Website</title>
 
@@ -51,7 +45,7 @@
                     Services
                   </a>
                   <ul class="dropdown-menu " aria-labelledby="navbarListing">
-                    <li><a class="dropdown-item" href="#">Property Possession Delay - RERA</a></li>
+                    <li><a class="dropdown-item" href="services.html">Property Possession Delay - RERA</a></li>
                     <li><a class="dropdown-item" href="#">Apostille Certificate</a></li>
                     <li><a class="dropdown-item" href="#">Possession Delay - NCLT</a></li>
                     <li><a class="dropdown-item" href="#">Mutual Consent Divorce</a></li>
@@ -170,7 +164,7 @@
               <h3 class="text-white">Land and Property Disputes</h3>
               <!-- <p>Property and land has been invested into and created by families over years. The assets are created so that they are either enjoyed by the owner himself.</p> -->
             </div>
-            <a href="#" class="stretched-link"></a>
+            <a href="services.html" class="stretched-link"></a>
           </div>
 
         </div>
@@ -182,7 +176,7 @@
               <h3 class="text-white">Real Estate</h3>
               <!-- <p>Real estate as the term suggests refers to buying, selling, or renting any type of property which includes residential, commercial, agricultural and industrial.</p> -->
             </div>
-            <a href="#" class="stretched-link"></a>
+            <a href="services.html" class="stretched-link"></a>
           </div>
         </div>
         <!-- col -->
@@ -193,7 +187,7 @@
               <h3 class="text-white">Inheritance and succession</h3>
               <!-- <p>Succession is the process of inheriting the assets which includes cash, jewellery, land, house or any property upon the death of a person. The succession by the legal.</p> -->
             </div>
-            <a href="#" class="stretched-link"></a>
+            <a href="services.html" class="stretched-link"></a>
           </div>
         </div>
         <!-- col -->
@@ -204,7 +198,7 @@
               <h3 class="text-white">Title Search Valuation</h3>
               <!-- <p>Do you own a property in India? If yes, do you have registered deeds to prove your ownership? Ownership to any property whether land/house/commercial/industrial is established…</p> -->
             </div>
-            <a href="#" class="stretched-link"></a>
+            <a href="services.html" class="stretched-link"></a>
           </div>
         </div>
       </div>
@@ -226,18 +220,18 @@
         <div class="col-lg-4 col-md-6">
           <div class="card mb-4 mb-md-0 bg-secondary-subtle">
               <div class="img-hover m-2 mb-0">
-                  <a href="#">
+                  <a href="services.html">
                       <img src="assets/images/services/land-property.jpg" alt="wed" class="img-fluid w-100">
                   </a>
               </div>
               <div class="card-body">
                   <h3>
-                      <a href="#" class="text-inherit">Land and Property Disputes</a>
+                      <a href="services.html" class="text-inherit">Land and Property Disputes</a>
                   </h3>
                   <div class="fs-5">
                       <p class="text-black">Property and land has been invested into and created by families over years.</p>
                   </div>
-                  <a href="#" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
+                  <a href="services.html" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
               </div>
           </div>
       </div>
@@ -247,18 +241,18 @@
         <div class="col-lg-4 col-md-6">
           <div class="card mb-4 mb-md-0 bg-secondary-subtle">
               <div class="img-hover m-2 mb-0">
-                  <a href="#">
+                  <a href="services.html">
                       <img src="assets/images/services/real-estate.jpg" alt="wed" class="img-fluid w-100">
                   </a>
               </div>
               <div class="card-body">
                   <h3>
-                      <a href="#" class="text-inherit">Real Estate</a>
+                      <a href="services.html" class="text-inherit">Real Estate</a>
                   </h3>
                   <div class="fs-5">
                       <p class="text-black">Real estate as the term suggests refers to buying, selling, or renting any type of property.</p>
                   </div>
-                  <a href="#" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
+                  <a href="services.html" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
               </div>
           </div>
       </div>
@@ -266,18 +260,18 @@
       <div class="col-lg-4 col-md-6">
         <div class="card mb-4 mb-md-0 bg-secondary-subtle">
             <div class="img-hover m-2 mb-0">
-                <a href="#">
+                <a href="services.html">
                     <img src="assets/images/services/inheritence.jpg" alt="wed" class="img-fluid w-100">
                 </a>
             </div>
             <div class="card-body">
                 <h3>
-                    <a href="#" class="text-inherit">Inheritance and succession</a>
+                    <a href="services.html" class="text-inherit">Inheritance and succession</a>
                 </h3>
                 <div class="fs-5">
                     <p class="text-black">Succession is the process of inheriting the assets which includes cash, jewellery, land, house or any property.</p>
                 </div>
-                <a href="#" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
+                <a href="services.html" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
             </div>
         </div>
     </div>
@@ -299,7 +293,6 @@
       </div>
     </div>
   </section>
-  <!-- footer -->
    <!-- footer -->
 
  <footer class="pt-12 pb-0 bg-light">
@@ -319,7 +312,7 @@
         <div class="mb-4 mb-lg-0">
           <h3 class="mb-3">Company</h3>
          <ul class="list-unstyled">
-           <li><a href="#" class="text-body text-hover-primary">Services</a></li>
+           <li><a href="services.html" class="text-body text-hover-primary">Services</a></li>
            <li><a href="#" class="text-body text-hover-primary">Consultation</a></li>
            <li><a href="#" class="text-body text-hover-primary">For Lawyers</a></li>
            <li><a href="#" class="text-body text-hover-primary">Business</a></li>
