--- a/services.html
+++ b/services.html
@@ -4,16 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="assets/images/legal-favicon.png">
 
-<!-- Libs -->
-<link rel="stylesheet" href="assets/libs/bootstrap-icons/font/bootstrap-icons.css">
-<link rel="stylesheet" href="assets/fonts/wedding-icon-font/flaticon.css">
-<link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
+    <!-- Libs -->
+    <link rel="stylesheet" href="assets/libs/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="assets/fonts/wedding-icon-font/flaticon.css">
+    <link rel="stylesheet" href="assets/fonts/fontello/css/fontello.css">
 
-<!-- Theme CSS -->
-  <link rel="stylesheet" href="assets/css/theme.min.css">
+    <!-- Theme CSS -->
+    <link rel="stylesheet" href="assets/css/theme.min.css">
 
-  <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
   <title>Your Legal Website</title>
 
