--- a/index.html
+++ b/index.html
@@ -111,18 +111,24 @@
                         <div class="row g-2">
                             <!-- col -->
                             <div class="col-sm">
-                                <select class="form-select border-white" id="selectService" aria-label="Floating label select example">
-                                    <option selected="">Property Possession Delay - RERA</option>
-                                    <option value="">Apostille Certificate</option>
-                                    <option value="">Possession Delay - NCLT</option>
-                                    <option value="">Mutual Consent Divorce</option>
-                                    <option value="">Cheque Bounce Complaint</option>
-                                    <option value="">Legal Notice</option>
+                              <div class="form-floating">
+                                <select class="form-select" id="selectService" aria-label="Floating label select example">
+                                  <option selected="">Property Possession Delay - RERA</option>
+                                  <option value="">Apostille Certificate</option>
+                                  <option value="">Possession Delay - NCLT</option>
+                                  <option value="">Mutual Consent Divorce</option>
+                                  <option value="">Cheque Bounce Complaint</option>
+                                  <option value="">Legal Notice</option>
                                 </select>
+                                <label for="selectService">Select Service</label>
+                              </div>
                             </div>
                             <!-- col -->
+
+                            <!-- col -->
                             <div class="col-sm">
-                              <select class="form-select border-white" aria-label="Floating label select example">
+                              <div class="form-floating">
+                                <select class="form-select" id="floatingSelectGrid" aria-label="Floating label select example">
                                   <option selected="">New Delhi</option>
                                   <option value="">Mumbai</option>
                                   <option value="">Pune</option>
@@ -130,19 +136,21 @@
                                   <option value="">Kolkata</option>
                                   <option value="">Gurgaon</option>
                                   <option value="">Bangalore</option>
-                              </select>
-                          </div>
+                                </select>
+                                <label for="floatingSelectGrid">Select Location</label>
+                              </div>
+                            </div>
                             <!-- col -->
                             <div class="col-sm-2">
                                 <div class="d-grid ">
-                                    <button type="submit" class="btn btn-primary bg-gold border-0">Submit</button>
+                                    <button type="submit" class="btn btn-primary bg-gold border-0 py-3">Submit</button>
                                 </div>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
-        </div>
+          </div>
         </div>
       </div>
     </div>
@@ -165,8 +173,10 @@
             <div class="position-absolute bottom-0 px-4 py-3 ">
               <h3 class="text-white">Land and Property Disputes</h3>
               <!-- <p>Property and land has been invested into and created by families over years. The assets are created so that they are either enjoyed by the owner himself.</p> -->
+              <p><a class="link-offset-1 text-white fw-bold text-uppercase" href="services.html">Read More</a><i class="bi bi-arrow-right fs-3 mx-2"></i></p>
             </div>
             <a href="services.html" class="stretched-link"></a>
+            
           </div>
 
         </div>
@@ -177,6 +187,7 @@
             <div class="position-absolute bottom-0 px-4 py-3">
               <h3 class="text-white">Real Estate</h3>
               <!-- <p>Real estate as the term suggests refers to buying, selling, or renting any type of property which includes residential, commercial, agricultural and industrial.</p> -->
+              <p><a class="link-offset-1 text-white fw-bold text-uppercase" href="services.html">Read More</a><i class="bi bi-arrow-right fs-3 mx-2"></i></p>
             </div>
             <a href="services.html" class="stretched-link"></a>
           </div>
@@ -188,6 +199,7 @@
             <div class="position-absolute bottom-0 px-4 py-3">
               <h3 class="text-white">Inheritance and succession</h3>
               <!-- <p>Succession is the process of inheriting the assets which includes cash, jewellery, land, house or any property upon the death of a person. The succession by the legal.</p> -->
+              <p><a class="link-offset-1 text-white fw-bold text-uppercase" href="services.html">Read More</a><i class="bi bi-arrow-right fs-3 mx-2"></i></p>
             </div>
             <a href="services.html" class="stretched-link"></a>
           </div>
@@ -199,6 +211,7 @@
             <div class="position-absolute bottom-0 px-4 py-3">
               <h3 class="text-white">Title Search Valuation</h3>
               <!-- <p>Do you own a property in India? If yes, do you have registered deeds to prove your ownership? Ownership to any property whether land/house/commercial/industrial is established…</p> -->
+              <p><a class="link-offset-1 text-white fw-bold text-uppercase" href="services.html">Read More</a><i class="bi bi-arrow-right fs-3 mx-2"></i></p>
             </div>
             <a href="services.html" class="stretched-link"></a>
           </div>
