home page changed

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                       <a href="services.html" class="text-inherit">Real Estate</a>
                   </h3>
                   <div class="fs-5">
-                      <p class="text-black">Real estate as the term suggests refers to buying, selling, or renting any type of property.</p>
+                      <p class="text-black">Real estate as the term suggests refers to buying, selling, or renting property.</p>
                   </div>
                   <a href="services.html" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
               </div>
@@ -284,7 +284,7 @@
                     <a href="services.html" class="text-inherit">Inheritance and succession</a>
                 </h3>
                 <div class="fs-5">
-                    <p class="text-black">Succession is the process of inheriting the assets which includes cash, jewellery, land, house or any property.</p>
+                    <p class="text-black">Succession is the process of inheriting the assets which any property.</p>
                 </div>
                 <a href="services.html" class="btn btn-primary bg-gold border-0 w-100">Read More</a>
             </div>
