--- a/services.html
+++ b/services.html
@@ -156,8 +156,8 @@
                                         d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z" />
                                 </svg>
                                 </div>
-                                <h3>Dedicated Case Manager</h3>
-                                <p class="mb-0">Dedicated Case Manager for timely updates of your case proceedings</p>
+                                <h3>Case Manager</h3>
+                                <p class="mb-0">Dedicated Case Manager for timely updates of your case</p>
                             </div>
                         </div>
                     </div>
